Fixed the flexbox issue for mobile devices: display is now left aligned

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@
   height: 15vh;
   padding: 1vh;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .decimal, .digit, .operator, .clear, .delete, .equal{
